Fixing bug in swiper container where you could, on mobile, scroll the whole app to the right

--- a/static/assets/main.css
+++ b/static/assets/main.css
@@ -144,6 +144,10 @@ body{
             display: inline;
         }
 
+        .swiper-container {
+            overflow: hidden;
+        }
+
         .swiper {
             width: 100%;
             max-width: 85vw;
